# template-concept

./: CMakeLists.txt  README.md  main.cpp  template-concept.hpp
